W2.Parser/alt/test/invalid/invalid8.c
//NOT ERROR FREE - This test case includes declaration of a structure with semi colon missing in structure declaration
#include<stdio.h>

struct book
{
	char name[10];
	char author[10];
}
int main()
{
	int num = 3;
	printf("Hello");

}
	